fix: fix landing movies blurr overlay

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -14,20 +14,19 @@ body {
   font-family: "Helvetica Neue";
 }
 
-.landing-images-blurr-overlay {
-  background: linear-gradient(
-      to bottom,
-      rgba(0, 0, 0, 0.8) 0%,
-      rgba(0, 0, 0, 0.8) 10%,
-      rgba(0, 0, 0, 0) 100%
-    ),
-    linear-gradient(
-      to right,
-      rgba(0, 0, 0, 0.8) 0%,
-      rgba(0, 0, 0, 0.8) 10%,
-      rgba(0, 0, 0, 0) 100%
-    ),
-    var(--background-url);
+.landing-images-overlay {
+  background: var(--background-url);
+}
+
+.landing-images-overlay::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom, black 0%, transparent 40%),
+    linear-gradient(to right, black 0%, transparent 60%);
 }
 
 /* Required asterisk for input fields */
